--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -22,7 +22,7 @@
             <header class="article__header">
                 <h1 class="article__title">{{ article.title }}</h1>
                 <p class="article__tagline">
-                    {% trans "From EncyclopedAI, the free encyclopedia" %}
+                    {% trans "From EncyclopedAI, the other encyclopedia" %}
                 </p>
             </header>
 
