--- a/templates/article_pending.html
+++ b/templates/article_pending.html
@@ -62,6 +62,9 @@
                     </a>
                 </p>
             {% else %}
+                {% if pending_notice %}
+                    <p class="article-pending__notice">{{ pending_notice }}</p>
+                {% endif %}
                 <div class="search-spinner search-spinner--visible article-pending__spinner" aria-hidden="true">
                     <div class="search-spinner__icon"></div>
                     <p class="search-spinner__label">{% trans "Consulting the archives." %}</p>
@@ -76,7 +79,7 @@
                 var url = "{{ pending_fetch_url|escapejs }}";
                 window.setTimeout(function() {
                     window.location.replace(url);
-                }, 400);
+                }, 2000);
             })();
         </script>
     {% endif %}
