--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: Georgia, "Times New Roman", Times, serif;
+    font-family: sans-serif;
     background: #ffffff;
     color: #000000;
     line-height: 1.6;
@@ -36,7 +36,7 @@ body {
     color: #54595d;
     font-size: 1.1rem;
     font-style: italic;
-    font-family: Georgia, serif;
+    font-family: sans-serif;
 }
 
 .search-form {
@@ -272,7 +272,7 @@ body {
 .article__body {
     margin-top: 1rem;
     line-height: 1.6;
-    font-size: 0.95rem;
+    font-size: 1.05rem;
     color: #202122;
 }
 
@@ -358,7 +358,7 @@ body {
     font-style: italic;
     color: #202122;
     text-align: center;
-    font-family: Georgia, "Times New Roman", Times, serif;
+    font-family: sans-serif;
     padding: 0.25rem 0;
 }
 
