--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
                 value="{{ query }}"
                 placeholder="{% trans "Try 'Solar system'" %}"
                 required
+                autofocus
                 class="search-form__input"
             >
             <button type="submit" class="search-form__button">{% trans "Search" %}</button>
