--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,8 @@
             <li class="articles-of-interest__item">
                 <a href="{% url 'main:article-detail' slug=article.slug %}" class="articles-of-interest__link">
                     <h3 class="articles-of-interest__article-title">{{ article.title }}</h3>
-                    {% if article.content_preview %}
-                    <div class="articles-of-interest__snippet">{{ article.content_preview|render_markdown|safe }}</div>
+                    {% if article.summary_snippet %}
+                    <div class="articles-of-interest__snippet">{{ article.summary_snippet }}</div>
                     {% endif %}
                     <span class="articles-of-interest__cta">{% trans "Read article" %}</span>
                 </a>
