Fix ToC to use hierarchical decimal numbering

--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -93,7 +93,7 @@
                     {% for item in table_of_contents %}
                     <li class="toc__item toc__item--level-{{ item.level }}">
                         <a href="#{{ item.id }}" class="toc__link">
-                            <span class="toc__number">{{ forloop.counter }}. </span>
+                            <span class="toc__number">{{ item.number }}. </span>
                             <span class="toc__text">{{ item.title }}</span>
                         </a>
                     </li>
